--- a/stories/index.html
+++ b/stories/index.html
@@ -1309,10 +1309,88 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/ko/0001_아주-키가-큰-아저씨_slides.html" target="_blank">아주 키가 큰 아저씨</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0002</td>
+      <td><a href="/stories/ko/0002_이-동물들을-보세요_slides.html" target="_blank">이 동물들을 보세요</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0004</td>
+      <td><a href="/stories/ko/0004_염소-개-그리고-소_slides.html" target="_blank">염소, 개 그리고 소</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/ko/0030_느낌들_slides.html" target="_blank">느낌들</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td><a href="/stories/ko/0073_숫자-세기_slides.html" target="_blank">숫자 세기</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0073"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/ko/0087_나는-책-읽기를-좋아해요_slides.html" target="_blank">나는 책 읽기를 좋아해요!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/ko/0095_자마는-대단해요_slides.html" target="_blank">자마는 대단해요!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/ko/0111_하마는-왜-털이-없을까요_slides.html" target="_blank">하마는 왜 털이 없을까요?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/ko/0112_나의-몸-_slides.html" target="_blank">나의 몸 </a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/ko/0129_게으른-동생_slides.html" target="_blank">게으른 동생</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/ko/0141_닭과-지네_slides.html" target="_blank">닭과 지네</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/ko/0156_배고픈-악어_slides.html" target="_blank">배고픈 악어</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td><a href="/stories/ko/0210_틴지와-소들_slides.html" target="_blank">틴지와 소들</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/ko/0302_불_slides.html" target="_blank">불</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -2057,13 +2135,13 @@
       <td>0001</td>
       <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
       <td><a href="http://my.africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
@@ -2075,7 +2153,7 @@
       <td>0004</td>
       <td><a href="http://my.africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0004">zh</a></td>
+      <td><a href="#ko0004">ko</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -2111,7 +2189,7 @@
       <td>0030</td>
       <td><a href="http://my.africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#ko0030">ko</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -2159,7 +2237,7 @@
       <td>0073</td>
       <td><a href="http://my.africanstorybook.org/stories/counting">Counting</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#eo0073">eo</a>, <a href="#nn0073">nn</a>, <a href="#no0073">no</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
+      <td><a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nn0073">nn</a>, <a href="#no0073">no</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
@@ -2183,7 +2261,7 @@
       <td>0087</td>
       <td><a href="http://my.africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -2195,7 +2273,7 @@
       <td>0095</td>
       <td><a href="http://my.africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#hi0095">hi</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -2213,7 +2291,7 @@
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -2249,7 +2327,7 @@
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -2267,7 +2345,7 @@
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#no0141">no</a></td>
+      <td><a href="#ko0141">ko</a>, <a href="#no0141">no</a></td>
     </tr>
     <tr>
       <td>0147</td>
@@ -2285,7 +2363,7 @@
       <td>0156</td>
       <td><a href="http://my.africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#gu0156">gu</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -2327,7 +2405,7 @@
       <td>0210</td>
       <td><a href="http://my.africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0210">es</a></td>
+      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -2399,7 +2477,7 @@
       <td>0302</td>
       <td><a href="http://my.africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
