update stories and translator

--- a/translator/index.html
+++ b/translator/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/translator.css"/>
     <link rel="stylesheet" type="text/css" href="css/modal.css" />
 
+    <link rel="stylesheet" type="text/css" href="css/baguetteBox.min.css">
+    <script src="js/baguetteBox.min.js" async></script>
+
     <script src="js/stories.js" type="text/javascript"></script>
     <script src="js/translator.js" type="text/javascript"></script>
     <script src="js/completed.js" type="text/javascript"></script>
