--- a/stories/index.html
+++ b/stories/index.html
@@ -1381,6 +1381,12 @@
       <td><a name="ko0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/ko/0158_닭과-독수리_slides.html" target="_blank">닭과 독수리</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/ko/0210_틴지와-소들_slides.html" target="_blank">틴지와 소들</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2364,6 +2370,12 @@
       <td><a href="http://my.africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#ar0156">ar</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="http://my.africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#ko0158">ko</a></td>
     </tr>
     <tr>
       <td>0172</td>
