--- a/stories/index.html
+++ b/stories/index.html
@@ -109,6 +109,8 @@
 
 <li class="toc"><a href="#persian">Persian [فارسی]</a></li><br>
 
+<li class="toc"><a href="#punjabi">Punjabi [ਪੰਜਾਬੀ]</a></li><br>
+
 <li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
 
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
@@ -1888,6 +1890,27 @@
 </table>
 
    </ul>
+  <h3><a name='punjabi'>Punjabi [ਪੰਜਾਬੀ]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html" target="_blank">ਮੋਮ ਦੇ ਬੱਚੇ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='russian'>Russian [Русский]</a></h3>
    <ul><table>
   <thead>
@@ -2531,7 +2554,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#tl0337">tl</a></td>
+      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a></td>
     </tr>
     <tr>
       <td>0341</td>
