--- a/stories/index.html
+++ b/stories/index.html
@@ -1904,7 +1904,7 @@
     <tr>
       <td>0337</td>
       <td><a href="/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html" target="_blank">ਮੋਮ ਦੇ ਬੱਚੇ</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pa0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
