--- a/stories/index.html
+++ b/stories/index.html
@@ -2088,10 +2088,46 @@
   </thead>
   <tbody>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/tl/0003_ano-isusuot-ko-sa-iskul_slides.html" target="_blank">Ano isusuot ko sa iskul?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/tl/0008_anong-ginagawa-mo_slides.html" target="_blank">Anong ginagawa mo?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/tl/0009_nasaan-ang-pusa-ko_slides.html" target="_blank">Nasaan ang pusa ko?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html" target="_blank">Si Nozibele at ang Tatlong Hibla ng Buhok</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/tl/0067_pagluto_slides.html" target="_blank">Pagluto</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html" target="_blank">Bakit walang buhok ang mga hippo</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/tl/0120_buhok_slides.html" target="_blank">Buhok</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0122</td>
@@ -2106,16 +2142,40 @@
       <td><a name="tl0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0231</td>
+      <td><a href="/stories/tl/0231_ibat-ibang-panahon_slides.html" target="_blank">Iba’t ibang panahon</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Aking libro ng larawan</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0271</td>
+      <td><a href="/stories/tl/0271_dalawa_slides.html" target="_blank">Dalawa</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/tl/0296_ang-tindero-ng-saging-na-si-tom-_slides.html" target="_blank">Ang Tindero ng Saging na si Tom </a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/tl/0337_mga-batang-sera_slides.html" target="_blank">Mga Batang Sera</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/tl/0342_parusa_slides.html" target="_blank">Parusa</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2176,7 +2236,7 @@
       <td>0003</td>
       <td><a href="http://my.africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -2200,13 +2260,13 @@
       <td>0008</td>
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -2251,10 +2311,16 @@
       <td><a href="#zh0064">zh</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="http://my.africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#tl0066">tl</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="http://my.africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0067">gu</a>, <a href="#no0067">no</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#gu0067">gu</a>, <a href="#no0067">no</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -2326,7 +2392,7 @@
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0120">gu</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#gu0120">gu</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0122</td>
@@ -2470,7 +2536,7 @@
       <td>0231</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -2494,7 +2560,7 @@
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0271">gu</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#gu0271">gu</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0287</td>
@@ -2507,6 +2573,12 @@
       <td><a href="http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#ne0294">ne</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0296">tl</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -2561,6 +2633,12 @@
       <td><a href="http://my.africanstorybook.org/stories/antoni-ke-bo-mang-bale-0">Antoni ke bo mang bale</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#es0341">es</a>, <a href="#gu0341">gu</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="http://my.africanstorybook.org/stories/punishment">Punishment</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#tl0342">tl</a></td>
     </tr>
     <tr>
       <td>0359</td>
