--- a/stories/index.html
+++ b/stories/index.html
@@ -2094,6 +2094,12 @@
       <td><a name="tl0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/tl/0006_si-anansi-at-ang-dunong_slides.html" target="_blank">Si Anansi at ang Dunong</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/tl/0008_anong-ginagawa-mo_slides.html" target="_blank">Anong ginagawa mo?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2104,6 +2110,12 @@
       <td><a href="/stories/tl/0009_nasaan-ang-pusa-ko_slides.html" target="_blank">Nasaan ang pusa ko?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0027</td>
+      <td><a href="/stories/tl/0027_bagong-buhay_slides.html" target="_blank">Bagong buhay</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0066</td>
@@ -2148,6 +2160,12 @@
       <td><a name="tl0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/tl/0234_andiswa-soccer-bida_slides.html" target="_blank">Andiswa, Soccer Bida</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Aking libro ng larawan</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2160,10 +2178,22 @@
       <td><a name="tl0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0291</td>
+      <td><a href="/stories/tl/0291_sabi-ng-ate-ni-vusi_slides.html" target="_blank">Sabi ng ate ni Vusi</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/tl/0296_ang-tindero-ng-saging-na-si-tom_slides.html" target="_blank">Ang Tindero ng Saging na si Tom</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/tl/0324_paluwas-sa-malaking-lungsod_slides.html" target="_blank">Paluwas sa malaking lungsod</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -2248,7 +2278,7 @@
       <td>0006</td>
       <td><a href="http://my.africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#tl0006">tl</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -2273,6 +2303,12 @@
       <td><a href="http://my.africanstorybook.org/stories/animals-uganda-7">The Animals of Uganda</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#eo0010">eo</a>, <a href="#yue0010">yue</a>, <a href="#zh0010">zh</a></td>
+    </tr>
+    <tr>
+      <td>0027</td>
+      <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0027">tl</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -2539,6 +2575,12 @@
       <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#tl0234">tl</a></td>
+    </tr>
+    <tr>
       <td>0248</td>
       <td><a href="http://my.africanstorybook.org/stories/my-trip-zoo">My trip to the Zoo</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
@@ -2567,6 +2609,12 @@
       <td><a href="http://my.africanstorybook.org/stories/mr-fly-and-mr-big-head">Mr Fly and Mr Big Head</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#nn0287">nn</a>, <a href="#no0287">no</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="http://my.africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#tl0291">tl</a></td>
     </tr>
     <tr>
       <td>0294</td>
@@ -2609,6 +2657,12 @@
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing-1">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#gu0320">gu</a>, <a href="#zh0320">zh</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0324">tl</a></td>
     </tr>
     <tr>
       <td>0327</td>
